fixed color button, stretched  width on form, added effects, fixed backround img in block questions

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,7 +11,10 @@
   background-image: url("../images/header/Arrow-2.png");
   background-repeat: no-repeat;
   background-position: 75%, 50%;
-  transition: background-color 0.3s, border-color 0.3s;
+  transition: background-color 0.3s,
+    border-color 0.3s,
+    color 0.3s,
+    background-image 0.3s;
   &:hover {
     background-color: transparent;
     border-color: #333;
@@ -27,6 +30,8 @@
     &:hover {
       background-color: $c-turquoise;
       border-color: $c-turquoise;
+      color: #fff;
+      background-image: url("../images/header/arrow-hower.png");
     }
   }
 
