--- a/src/styles/blocks/questions.scss
+++ b/src/styles/blocks/questions.scss
@@ -1,7 +1,7 @@
 .questions {
   padding: 45px 0 102px;
   background-image: url("../images/questions/backgr-mobile.png");
-  background-size: contain;
+  background-size: cover;
   background-position-y: top;
   background-position-x: 46%;
   background-repeat: no-repeat;
